--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,38 @@
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://fonts.googleapis.com/css2?family=Gluten&display=swap');
+
+:root {
+  --main-font-family: 'Gluten', sans-serif;
+  --second-font-family: 'Helvetica', sans-serif;
+  --lazy-barbecue: #a3320b;
+  --lazy-black: #001514;
+  --lazy-ketchup: #d90b08;
+  --lazy-mayo: #e6af2e;
+  --lazy-white: #fbfffe;
+}
+
+body {
+  animation: gradient-animation 30s ease infinite;
+  background: linear-gradient(142deg, #d90b08, #e6af2e, #a3320b);
+  background-size: 180% 180%;
+  font-family: var(--main-font-family);
+  height: 120vh;
+  padding-bottom: 5vh;
+  margin: 0;
+  background-attachment: fixed;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--main-font-family), var(--second-font-family)
 }
 
 a {
-  color: inherit;
+  color: unset;
   text-decoration: none;
 }
 
