--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,20 +9,20 @@
   --lazy-ketchup: #d90b08;
   --lazy-mayo: #e6af2e;
   --lazy-white: #fbfffe;
-}
-
-body {
   animation: gradient-animation 30s ease infinite;
   background: linear-gradient(142deg, #d90b08, #e6af2e, #a3320b);
-  background-size: 180% 180%;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   font-family: var(--main-font-family);
-  height: 120vh;
-  padding-bottom: 5vh;
+  /* padding-bottom: 5vh; */
   margin: 0;
   background-attachment: fixed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 html,
 body {
