--- a/styles/FooterNavbar.module.css
+++ b/styles/FooterNavbar.module.css
@@ -54,8 +54,7 @@
 }
 
 .linkActive {
-  color: var(--lazy-ketchup);
-  filter: drop-shadow(2px 2px 0.2rem var(--lazy-white));
+  filter: drop-shadow(0 0 0.2rem var(--lazy-ketchup));
   text-decoration: none;
 }
 
