--- a/styles/Offer.module.css
+++ b/styles/Offer.module.css
@@ -3,6 +3,9 @@
 .Offer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .OfferTitleh2 {
@@ -29,7 +32,15 @@
   justify-content: center;
   margin: 0.3em;
   text-align: center;
-  margin-bottom: -40px;
+}
+
+.OfferPresentationText3 {
+  color: var(--lazy-black);
+  display: flex;
+  font-size: 1.4em;
+  justify-content: center;
+  margin: 4vh 4vw;
+  text-align: center;
 }
 
 .Offer-Button {
