--- a/styles/Slider.css
+++ b/styles/Slider.css
@@ -1,8 +1,15 @@
 
 
 .mySwiper {
-  width: 100%;
-  height: 100%;
+  width: 95vw;
+  height: 50vh;
+  margin: 1vh 2vw;
+}
+
+.myMovieSwiper {
+    width: 95vw;
+    height: 80vh;
+    margin: 0 2vw;
 }
 
 .swiper-slide {
@@ -49,7 +56,7 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 75%;
+  top: 60%;
   z-index: 10;
 }
 
@@ -64,5 +71,7 @@
   margin-top: 2em;
   text-transform: none;
   text-transform: none !important;
-  top: 75%;
+  top: 60%;
 }
+
+
