--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,3 +46,19 @@ a {
   margin-top: 20vh;
   font-size: 1.8em;
 }
+
+.refreshButton {
+  display: flex;
+    justify-self: center;
+    align-self: center;
+    background-color: var(--lazy-barbecue);
+    color: var(--lazy-white);
+    font-family: var(--main-font-family);
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    padding: 10px;
+    border-radius: 5px;
+}
